--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "musictribes-design-system",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "sync": "node scripts/sync-tokens.js"
   },
